--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
       <h5>Puntos clave:</h5>
       
       <!-- Transforma los "puntos clave" en una lista desordenada -->
-      <p>HTML es un lenguaje muy sencillo compuesto de elementos.</p>
-      <p>
+    <ul>
+        <li> es un lenguaje muy sencillo compuesto de elementos.</li>
+      <li>
         Un elemento HTML normalmente consta de una etiqueta de inicio y una
         etiqueta de finalización, con el contenido insertado entre ambas.
-      </p>
+      </li>
+    </ul>
     </div>
 
     <div class="css-exp">
