Actualización, listas desordenadas

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
         crear la <strong>estructura y el contenido</strong> de una página web.
       </p>
       <h5>Puntos clave:</h5>
-      
       <!-- Transforma los "puntos clave" en una lista desordenada -->
     <ul>
-        <li> es un lenguaje muy sencillo compuesto de elementos.</li>
-      <li>
+        <li>Es un lenguaje muy sencillo compuesto de elementos.</li>
+        <li>
         Un elemento HTML normalmente consta de una etiqueta de inicio y una
-        etiqueta de finalización, con el contenido insertado entre ambas.
-      </li>
+        etiqueta de finalización, con el contenido insertado entre ambas.</li>
     </ul>
     </div>
 
