--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <!-- Transforma los "puntos clave" en una lista desordenada -->
     <ul>
         <li>Es un lenguaje muy sencillo compuesto de elementos.</li>
-        <li>
-        Un elemento HTML normalmente consta de una etiqueta de inicio y una
+        <li>Un elemento HTML normalmente consta de una etiqueta de inicio y una
         etiqueta de finalización, con el contenido insertado entre ambas.</li>
     </ul>
     </div>
